Completo, manca di revisione e search

--- a/FIGMMA/src/main/resources/messages/messages.properties
+++ b/FIGMMA/src/main/resources/messages/messages.properties
@@ -15,3 +15,5 @@ site.duplicate= Questo luogo esite già
 course.duplicate= Il corso gia esiste
 NotSize5= la lunghezza deve essere di 5
 NotNumeric=riga deve essere costituita da soli numeri
+NotPast= la data deve essere futura e non passata
+endBeforeStart= La fine del contratto deve essere dopo l'inizio
