--- a/FIGMMA/src/main/resources/messages/messages.properties
+++ b/FIGMMA/src/main/resources/messages/messages.properties
@@ -17,3 +17,4 @@ NotSize5= la lunghezza deve essere di 5
 NotNumeric=riga deve essere costituita da soli numeri
 NotPast= la data deve essere futura e non passata
 endBeforeStart= La fine del contratto deve essere dopo l'inizio
+Past=la data deve essere nel passato
