--- a/FIGMMA/src/main/resources/messages/messages.properties
+++ b/FIGMMA/src/main/resources/messages/messages.properties
@@ -18,3 +18,7 @@ NotNumeric=riga deve essere costituita da soli numeri
 NotPast= la data deve essere futura e non passata
 endBeforeStart= La fine del contratto deve essere dopo l'inizio
 Past=la data deve essere nel passato
+team.duplicate= Esiste gia un Team con questo nome
+athlete.dateOfBirth.Past=La data di nascita deve essere nel passato
+
+Past.athlete.dateOfBirth=La data di nascita deve essere nel passato
